--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ pycparser==2.20
 requests==2.25.1
 requests-oauthlib==1.3.0
 six==1.15.0
-urllib3==1.26.4
+urllib3>=1.26.5
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
